# modern_cpp_playground

./: CMakeLists.txt  README.md
concurrency/: CMakeLists.txt
concurrency/atomic/: CMakeLists.txt  main.cpp
concurrency/false_sharing/: CMakeLists.txt
concurrency/false_sharing/include/: padded_struct.h  struct.h
concurrency/false_sharing/src/: main.cpp
cpp20/: CMakeLists.txt
cpp20/ranges/: CMakeLists.txt  main.cpp
mini_projects/: CMakeLists.txt
mini_projects/people_analytics/: CMakeLists.txt  main.cpp
performance/: CMakeLists.txt
performance/datamodelbenchmark/: CMakeLists.txt  main.cpp
performance/emplace_back/: CMakeLists.txt  main.cpp
performance/reserve/: CMakeLists.txt  main.cpp
